@@ -5,42 +5,51 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dao.FilmRepository;
+import ru.yandex.practicum.filmorate.dao.UserRepository;
+import ru.yandex.practicum.filmorate.dto.ChangeFilmDto;
+import ru.yandex.practicum.filmorate.dto.FilmResponseDto;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.mapper.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.user.InMemoryUserStorage;
+import ru.yandex.practicum.filmorate.model.User;
 
 import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class FilmService {
-    private final FilmStorage filmStorage;
-    private final InMemoryUserStorage userStorage;
+    private final FilmRepository filmRepository;
+    private final FilmMapper filmMapper;
+    private final UserRepository userRepository;
     private static final LocalDate MIN_RELEASE_DATE = LocalDate.of(1895, 12, 28);
 
-    public void validateFilm(Film film) {
-        if (film.getReleaseDate().isBefore(MIN_RELEASE_DATE)) {
-            log.warn("Ошибка валидации: дата релиза {} раньше минимальной {}", film.getReleaseDate(), MIN_RELEASE_DATE);
-            throw new ValidationException("Дата релиза не может быть раньше 28 декабря 1895 года");
-        }
-    }
+//    public void validateFilm(Film film) {
+//        if (film.getReleaseDate().isBefore(MIN_RELEASE_DATE)) {
+//            log.warn("Ошибка валидации: дата релиза {} раньше минимальной {}", film.getReleaseDate(), MIN_RELEASE_DATE);
+//            throw new ValidationException("Дата релиза не может быть раньше 28 декабря 1895 года");
+//        }
+//    }
 
-    public ResponseEntity<List<Film>> getAllFilms() {
+    public ResponseEntity<List<FilmResponseDto>> getAllFilms() {
         log.debug("Запрос всех фильмов");
-        List<Film> films = filmStorage.getAllFilms();
+        List<FilmResponseDto> films = filmRepository.findAll().stream()
+                .map(filmMapper::toFilmDto)
+                .toList();
+
         log.info("Возвращено {} фильмов", films.size());
         return ResponseEntity.ok(films);
     }
 
-    public ResponseEntity<Film> addFilm(Film film) {
+    public ResponseEntity<FilmResponseDto> addFilm(ChangeFilmDto film) {
         log.debug("Попытка добавить фильм: {}", film.getName());
 
-        boolean filmExists = filmStorage.getAllFilms().stream()
+        boolean filmExists = filmRepository.findAll().stream()
                 .anyMatch(u -> u.getName().equalsIgnoreCase(film.getName()));
         if (filmExists) {
             log.warn("Фильм уже существует: {}", film.getName());
@@ -52,15 +61,17 @@ public class FilmService {
             throw new ValidationException("Дата релиза не может быть раньше 28 декабря 1895 года");
         }
 
-        filmStorage.addFilm(film);
-        log.info("Фильм успешно добавлен: ID={}, Название={}", film.getId(), film.getName());
-        return ResponseEntity.status(HttpStatus.CREATED).body(film);
+        Film entity = filmMapper.toEntity(film);
+        filmRepository.save(entity);
+        log.info("Фильм успешно добавлен: ID={}, Название={}", entity.getId(), entity.getName());
+
+        return ResponseEntity.status(HttpStatus.CREATED).body(filmMapper.toFilmDto(entity));
     }
 
-    public ResponseEntity<Film> updateFilm(Film film) {
+    public ResponseEntity<FilmResponseDto> updateFilm(ChangeFilmDto film) {
         log.debug("Попытка обновить фильм ID={}", film.getId());
 
-        List<Film> allFilms = filmStorage.getAllFilms();
+        List<Film> allFilms = filmRepository.findAll();
         Film updateFilm = allFilms.stream()
                 .filter(f -> Objects.equals(f.getId(), film.getId()))
                 .findFirst()
@@ -103,9 +114,9 @@ public class FilmService {
             updateFilm.setDuration(film.getDuration());
         }
 
-        filmStorage.updateFilm(updateFilm);
+        filmRepository.save(updateFilm);
         log.info("Фильм успешно обновлен: ID={}", film.getId());
-        return ResponseEntity.ok(updateFilm);
+        return ResponseEntity.ok().body(filmMapper.toFilmDto(updateFilm));
     }
 
     public ResponseEntity<Void> addLike(Long filmId, Long userId) {
@@ -116,22 +127,26 @@ public class FilmService {
             throw new ValidationException("ID не может быть null");
         }
 
-        Film film = filmStorage.getAllFilms().stream()
-                .filter(f -> f.getId().equals(filmId))
-                .findFirst()
+        Film film = filmRepository.findById(filmId)
                 .orElseThrow(() -> {
                     log.error("Фильм не найден: ID={}", filmId);
                     return new NotFoundException("Фильм с id " + filmId + " не найден");
                 });
 
-        userStorage.getUserById(userId);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> {
+                    log.error("Пользователь не найден: ID={}", userId);
+                    return new NotFoundException("Пользователь с id " + userId + " не найден");
+                });
 
-        if (film.getLikes().contains(userId)) {
+        List<User> usersWithLikes = film.getUsersWithLikes();
+        if (usersWithLikes.contains(user)) {
             log.warn("Повторный лайк: userID={} уже лайкал filmID={}", userId, filmId);
             throw new ValidationException("Пользователь уже поставил лайк этому фильму");
         }
 
-        film.getLikes().add(userId);
+        usersWithLikes.add(user);
+        filmRepository.save(film);
         log.info("Лайк добавлен: filmID={}, userID={}", filmId, userId);
         return ResponseEntity.ok().build();
     }
@@ -144,26 +159,30 @@ public class FilmService {
             throw new ValidationException("ID не был введен");
         }
 
-        Film film = filmStorage.getAllFilms().stream()
-                .filter(f -> f.getId().equals(filmId))
-                .findFirst()
+        Film film = filmRepository.findById(filmId)
                 .orElseThrow(() -> {
                     log.error("Фильм не найден: ID={}", filmId);
                     return new NotFoundException("Фильм с id " + filmId + " не найден");
                 });
 
-        userStorage.getUserById(userId);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> {
+                    log.error("Пользователь не найден: ID={}", userId);
+                    return new NotFoundException("Пользователь с id " + userId + " не найден");
+                });
 
-        if (!film.getLikes().remove(userId)) {
+        List<User> usersWithLikes = film.getUsersWithLikes();
+        if (!usersWithLikes.remove(user)) {
             log.warn("Лайк не найден: userID={} не лайкал filmID={}", userId, filmId);
             throw new ValidationException("Пользователь не ставил лайк этому фильму");
         }
 
+        filmRepository.save(film);
         log.info("Лайк удален: filmID={}, userID={}", filmId, userId);
         return ResponseEntity.ok().build();
     }
 
-    public ResponseEntity<List<Film>> getPopularFilms(int count) {
+    public ResponseEntity<List<FilmResponseDto>> getPopularFilms(int count) {
         log.debug("Запрос популярных фильмов: count={}", count);
 
         if (count <= 0) {
@@ -171,31 +190,27 @@ public class FilmService {
             throw new ValidationException("Параметр count должен быть положительным числом");
         }
 
-        List<Film> popularFilms = filmStorage.getAllFilms().stream()
-                .sorted(Comparator.comparingInt((Film film) -> film.getLikes().size()).reversed())
+        List<Film> popularFilms = filmRepository.findAll().stream()
+                .sorted(Comparator.comparingInt((Film film) -> film.getUsersWithLikes().size()).reversed())
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("Возвращено {} популярных фильмов", popularFilms.size());
-        return ResponseEntity.ok(popularFilms);
+        return ResponseEntity.ok(filmMapper.toFilmDtoList(popularFilms));
     }
 
-    public ResponseEntity<Film> getFilmById(Long filmId) {
-        if (filmId == null || filmId < 0) {
-            throw new ValidationException("Некорректный ID фильма");
-        }
+    public ResponseEntity<FilmResponseDto> getFilmById(Long filmId) {
+        Film film = filmRepository.findById(filmId)
+                .orElseThrow(() -> new NotFoundException("Фильм с ID %s не найден".formatted(filmId)));
 
-        Film film = filmStorage.getFilmById(filmId);
-        if (film == null) {
-            throw new NotFoundException("Фильм с ID %s не найден".formatted(filmId));
-        }
         log.info("Найден фильм: ID={}, Название={}", filmId, film.getName());
-        return ResponseEntity.ok(film);
+
+        return ResponseEntity.ok(filmMapper.toFilmDto(film));
     }
 
     public void deleteAllFilms() {
         log.warn("Удаление всех фильмов");
-        filmStorage.deleteAll();
+        filmRepository.deleteAll();
         log.info("Все фильмы удалены");
     }
 
